k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-service
  labels:
    app: product-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: product-service
