k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  namespace: sangsangplus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: api.sangsangplus.com
    http:
      paths:
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8082
